# app

./: .gitignore  CHANGELOG.md  MEMORY.md  MIGRATION_GUIDE.md  PERFORMANCE_ANALYSIS.md  POLICY.md  README.md  TODO.md  api-docs-community.yaml  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.js
.cargo/: config.toml
.changeset/: README.md  cool-ads-sleep.md  curly-dots-invite.md  curvy-banks-know.md  dark-mangos-drum.md  eager-news-itch.md  early-dancers-hang.md  eight-dryers-wait.md  empty-times-check.md  every-lands-call.md  flat-bottles-tickle.md  four-clouds-stay.md  gold-words-heal.md  itchy-tips-add.md  large-coins-train.md  lemon-memes-relax.md  major-bikes-begin.md  major-hands-deny.md  major-pigs-own.md  major-streets-melt.md  modern-humans-roll.md  open-oranges-smile.md  perky-keys-sip.md  petite-corners-hug.md  puny-kings-stick.md  silent-planes-fry.md  sixty-hands-lick.md  slimy-badgers-swim.md  slow-seas-matter.md  smart-maps-sell-1.md  smart-maps-sell-2.md  smart-maps-sell-3.md  smart-maps-sell-4.md  smart-maps-sell.md  tiny-worms-greet.md  twelve-baths-buy.md  twelve-words-camp.md  upset-years-ring.md  violet-wings-sink.md  whole-dryers-clap.md
.cursor/rules/: blank-lines.mdc  component-patterns.mdc  interactive-cursor.mdc  phosphor-icon-naming.mdc  svelte-patterns.mdc
.github/workflows/: pocketbase.yml  release.yaml  release.yml
.kilo/plans/: app-logic-rewrite.md
bun-sidecar/: build.js  index.ts  package.json  parser.js
bun-sidecar/src/: relic.ts  server.ts  types.d.ts
bun-sidecar/src/coh/: coh.ts  game.ts  lobby.ts  (+2 more)
coh.replayparser/: ActionDefinitions.js  CoHReplayParser.csproj  OptimizedProgram.cs  OptimizedReplayParser.cs  Program.cs  README.md  README_Enhanced.md  Replay.js  ReplayParser.js  ReplayStream.js  compare-parsers.js  index.js  package.json  temp.rec
pocketbase/: docker-compose.yml  tsSchema.ts  zodSchema.ts
pocketbase/pb_hooks/: config.json  handler.js  main.pb.js  schema.json
pocketbase/pb_migrations/: 1768244338_updated_lobbies.js  1768244353_updated_lobby_aggregation.js  1768244367_updated_lobby_aggregation_community.js  1768244400_optimize_match_aggregation_players.js  1768244410_optimize_match_aggregation_community_players.js  1768244981_updated_match_aggregation.js  1768245030_updated_match_aggregation_community.js  1768245160_updated_match_aggregation_community.js  1768245170_updated_match_aggregation_community.js  1768245177_updated_replay_aggregation.js  1768328816_updated_match_aggregation_community.js  1768845422_updated_matches.js  1768845446_updated_match_aggregation.js  1768845463_updated_match_aggregation_community.js  1768874120_updated_lobby_aggregation_community.js  1769177758_collections_snapshot.js  1769178220_created_comments.js  1769178523_created_lobby_comments.js  1769178546_updated_lobby_comments.js  1769179914_updated_lobby_comments.js  1769179956_updated_comments.js  1769179972_updated_lobby_comments.js  1769358544_updated_attachments.js  1769391460_updated_comments.js  1769391693_updated_comments.js  1769392825_updated_comments.js  1769432890_updated_lobby_comments.js  1769433053_updated_users.js  1769433069_updated_comments.js  1769433449_updated_comments.js  1769433718_updated_comments.js  1769448768_updated_comments.js  1769449900_added_aggregation_indexes.js  1773939379_updated_lobby_aggregation.js  1773939442_updated_lobby_aggregation.js  1775929715_collections_snapshot.js  1776214406_created_lobbies_live.js  1776298366_updated_lobbies_live.js
scripts/: fix-replays.mjs  merge-duplicate-users.mjs  version.mjs
src/: app.css  app.d.ts  app.html  vite-env.d.ts
src-tauri/: 4p_rails and metal.2024-01-27.22-15-48.rec  Cargo.toml  tauri.conf.json
src-tauri/binaries/pb_data/: data.db
src-tauri/capabilities/: default.json
src-tauri/src/: input.rs  lib.rs  migrations.rs  process_check.rs  replay_parser.rs  unzip.rs  webserver.rs  ws_server.rs
src/lib/: utils.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
static/: example-script.js  simple-example.html  websocket-client.js  websocket-test.html
(+373 files in other folders)
