[package]
name = "fknoobscoh"
version = "1.0.0-beta.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fknoobscoh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.1"
tauri-plugin-oauth = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-shell = "2"
tauri-plugin-http = { version = "2", features = ["dangerous-settings"] }
tauri-plugin-cors-fetch = "4.1.0"
tauri-plugin-dialog = "2.4.1"
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tauri-plugin-websocket = "2"
tauri-plugin-localhost = "2"
socket2 = "0.5"
warp = "0.3"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4"] }
zip = "0.6"
window-vibrancy = "0.7.1"
tauri-plugin-cache = "0.1.5"
tauri-plugin-upload = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
enigo = "0.3"
sysinfo = "0.30"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
